# thesis-work

./: .gitignore  LICENSE  README.md  TODO.md
data/: finnsentiment_cleaned.csv  finnsentiment_cleaned.pkl
data/finsen-v1-1-src/: FinnSentiment-1.1.tsv
notebooks/: initial-notebook.ipynb  preprocess_sentiment_data.ipynb  pyproject.toml  qlora_modernbert_notebook.py  train_model_for_sentiment.ipynb
panel_data_analysis/: clean_parse_macro_data.ipynb  compile_final_dataset.ipynb  initialize_dataset.ipynb  mock_statistical_testing.ipynb  preprocess_controlvariable_data.ipynb  pyproject.toml  sentiment_analysis.ipynb  sentiment_analysis_daily.ipynb  sentiment_analysis_ldv_daily.ipynb  sentiment_analysis_ldv_monthly.ipynb  sentiment_analysis_ldv_weekly.ipynb  sentiment_analysis_monthly copy.ipynb  sentiment_analysis_monthly.ipynb  sentiment_analysis_placebo_daily.ipynb  sentiment_analysis_placebo_monthly.ipynb  sentiment_analysis_placebo_weekly.ipynb  sentiment_analysis_weekly.ipynb
scraping/: README.md  TODO.md  pyproject.toml
scraping/input_data/: urls_inderes.yaml  urls_kauppalehti.yaml  urls_sijoitustieto.yaml
scraping/src/: main.py
sentiment/: apply_all_labels_finnishbert.ipynb  apply_all_labels_finnishbert_new.ipynb  bert_finnish_train_evaluate.ipynb  final_sbert_template_notebook.ipynb  final_template_notebook.ipynb  modernbert_finnish_train_evaluate.ipynb  predict_labeled_xlm_finnsentiment_dapt.ipynb  predict_labeled_xlmroberta10000finnsentiment.ipynb  preprocess_forum_data.ipynb  preprocess_sentiment_data.ipynb  pyproject.toml  train_model_for_sentiment_mps.ipynb  xlm_roberta_train_evaluate.ipynb
sentiment-labeling/: label.py  llm_fewshot_labeling.ipynb
sentiment/data/: finnsentiment_cleaned_unambiguous.pkl
sentiment/experiments/: bert_large_finnish_cased_v1_train_eval.ipynb  bert_large_finnish_cased_v1_train_eval_ablationstudies.ipynb  finnish_modernbert_large_short_ablationstudies.ipynb  finnish_modernbert_large_short_train_eval.ipynb  megatron-bert-finnish-cased-1_3B_train_evaluate.ipynb  multilingual-e5-large-instruct_train_test.ipynb  multilingual-e5-large_setfit_train_test.ipynb  multilingual-e5-large_train_test.ipynb  multilingual-e5-large_train_test_ablationstudies.ipynb  (+6 more)
sentiment/notebooks/: preprocess_controlvariable_data.ipynb  preprocess_forum_data.ipynb  pyproject.toml  qlora_modernbert_notebook.py  train_model_for_sentiment_colab.ipynb  train_model_for_sentiment_mps.ipynb
(+21 files in other folders)
