[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.6",
    "pandas>=2.3.2",
    "pip>=25.2",
    "polars>=1.33.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.0",
]
