[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.6",
    "mlx-lm>=0.27.1",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "pip>=25.2",
    "polars>=1.33.0",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.0",
    "trl>=0.22.2",
]
